# remote_teleop

./: CMakeLists.txt  README.md  package.xml
action/: TurnInPlace.action
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
launch/: rt_nodes.launch
remote_teleop_robot_backend/: CMakeLists.txt  package.xml
remote_teleop_robot_backend/action/: Nudge.action  PointClickNav.action  ResetMarker.action  SetNavGoal.action  SpeedToggle.action  StopNav.action  TurnInPlace.action
remote_teleop_robot_backend/launch/: costmap.launch  costmap.yaml  costmap_freight.yaml  image_rotater_params.yaml  rt_nodes.launch
remote_teleop_robot_backend/msg/: StopNavGoal.msg  Velocity.msg
remote_teleop_robot_backend/src/: OLD_turn_in_place_server.py  aah.py  costmap.cpp  costmap.h  costmap.yaml  interactive_marker_server.cpp  remote_teleop_server.cpp  remote_teleop_server.h  rt_backend.cpp  rt_backend.h  turn_in_place_server.cpp  turn_in_place_server.h  turn_in_place_server.py
remote_teleop_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml  rviz_config.rviz
remote_teleop_rviz_plugin/include/remote_teleop_rviz_plugin/: remote_teleop_panel.h
remote_teleop_rviz_plugin/src/: costmap.cpp  costmap.h  drive_widget.cpp  drive_widget.h  point_click_nav_panel.cpp  point_click_nav_panel.h  point_click_nav_tool.cpp  point_click_nav_tool.h  remote_teleop_panel.cpp  remote_teleop_panel.h  teleop_nav_panel.cpp  teleop_nav_panel.h  turn_in_place_panel.cpp  turn_in_place_panel.h
src/: action_remote_teleop_server.py  test.py  turn_in_place_server.py
(+98 files in other folders)
