<package>
  <name>remote_teleop_rviz_plugin</name>
  <version>0.11.0</version>
  <description>
     Tutorials showing how to write plugins for RViz.
  </description>
  <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_plugin_tutorials</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>remote_teleop_robot_backend</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>remote_teleop_robot_backend</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
